<resources>
    <string name="app_name">TipAndSplit</string>
    <string name="bill_details">Bill details</string>
    <string name="bill_summary">Bill summary</string>
    <string name="reset">Reset</string>
    <string name="amount_person">Amount per person</string>
    <string name="total_amount">Total amount</string>
    <string name="person">Split by</string>
    <string name="split_bill">Split bill</string>
    <string name="defaultTipPercnt">15%</string>
    <string name="tip">Tip</string>
    <string name="bill_amount">Bill amount</string>
    <string name="PayHint">Tim hortons Sunday eve</string>
    <string name="pay_for">Bill name</string>
</resources>
